--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Saeed Salam"
 author: "Saeed Salam"
-description: "Saeed Salam's Blog on front-end development, blogging, and more." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "Blog on front-end development, blogging, and more." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
